@@ -1371,6 +1371,21 @@ bool CXBoxRenderer::CreateYV12Texture(int index)
     return false;
   }
   ClearYV12Texture(index);
+
+  // create the field-based textures for interlacing as well
+  D3DLOCKED_RECT lr;
+  // chroma only needed to prevent chroma bug
+  m_UTexture[index]->LockRect(0, &lr, NULL, 0);
+  m_chromaFieldPitch = lr.Pitch;
+  XGSetTextureHeader(m_iSourceWidth / 2 + m_chromaFieldPitch, m_iSourceHeight / 4, 1, 0, D3DFMT_LIN_L8, 0, &m_UFieldTexture[index], 0, lr.Pitch * 2);
+  m_UFieldTexture[index].Register(lr.pBits);
+  m_UTexture[index]->UnlockRect(0);
+  m_VTexture[index]->LockRect(0, &lr, NULL, 0);
+  m_chromaFieldPitch = lr.Pitch;
+  XGSetTextureHeader(m_iSourceWidth / 2 + m_chromaFieldPitch, m_iSourceHeight / 4, 1, 0, D3DFMT_LIN_L8, 0, &m_VFieldTexture[index], 0, lr.Pitch * 2);
+  m_VFieldTexture[index].Register(lr.pBits);
+  m_VTexture[index]->UnlockRect(0);
+
   CLog::Log(LOGDEBUG, "created yv12 texture %i", index);
   g_graphicsContext.Unlock();
   return true;
